k8s-development/kompose-extras/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.29.0 (997957870)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.29.0 (997957870)
      creationTimestamp: null
      labels:
        io.kompose.network/financedashboard-default: "true"
        io.kompose.service: api
    spec:
      containers:
        - env:
            - name: PGDATABASE
              value: postgres
            - name: PGHOST
              value: postgres
            - name: PGPASSWORD
              value: postgres_password
            - name: PGPORT
              value: "5432"
            - name: PGUSER
              value: postgres
          image: api
          name: api
          resources: {}
          volumeMounts:
            - mountPath: /app/node_modules
              name: api-claim0
            - mountPath: /app
              name: api-claim1
      restartPolicy: Always
      volumes:
        - name: api-claim0
          persistentVolumeClaim:
            claimName: api-claim0
        - name: api-claim1
          persistentVolumeClaim:
            claimName: api-claim1
status: {}
