k8s-development/kompose-extras/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.29.0 (997957870)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
    - name: "3050"
      port: 3050
      targetPort: 80
  selector:
    io.kompose.service: nginx
status:
  loadBalancer: {}
