k8s-development/kompose-extras/financedashboard-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: financedashboard-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/financedashboard-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/financedashboard-default: "true"
